Some more info on tech used, spacing/coloring text, button styling, fixed Issue #2 where FidO doesn't check if best square is already placed.

--- a/WidgetWebApp/wwwroot/css/site.css
+++ b/WidgetWebApp/wwwroot/css/site.css
@@ -407,6 +407,9 @@ body.is-mobile.home #footer {
 .static-page-content {
     color: #4ab9e4;
 }
+    .static-page-content a {
+        color: #95e2ff;
+    }
 
 /* Set to baseline */
 .scrollVertBaseline {
